--- a/force-app/main/default/aura/VisitPlanConfiguration/VisitPlanConfiguration.css
+++ b/force-app/main/default/aura/VisitPlanConfiguration/VisitPlanConfiguration.css
@@ -21,6 +21,9 @@
 .THIS .schevron {
     display: block;
     margin: 2px;
+    margin-top: 30px;
+    margin-left: 50px;
+
 }
 .THIS .flex-container {
     align-items: end;
@@ -29,4 +32,8 @@
 .THIS .slds-button_icon-border{
      border: 0px solid rgb(221, 219, 218);
      border-color: white;
+}
+.THIS .iconClass {
+    height: 47px!important;
+    width: 30px!important;
 }
