--- a/force-app/main/default/aura/UpcomingVisitsPreviewPanel/UpcomingVisitsPreviewPanel.cmp
+++ b/force-app/main/default/aura/UpcomingVisitsPreviewPanel/UpcomingVisitsPreviewPanel.cmp
@@ -29,7 +29,7 @@
                     <aura:iteration var="visit" items="{!v.visits}">
                         <tr>
                             <td>{!visit.Name}</td>
-                            <td>{!visit.Timeplane__c}</td>
+                            <td>{!visit.Visit_Schedule__c}</td>
                             <td><c:RRIconSplitter class="svl-icon" value="{!visit.Icons__c}" numOfIconsToDisplay="3"/></td>
                         </tr>
                     </aura:iteration>
