--- a/force-app/main/default/layouts/Visit__c-Visit Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Visit__c-Visit Layout.layout-meta.xml
@@ -7,16 +7,16 @@
         <label>Information</label>
         <layoutColumns>
             <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Status__c</field>
+            </layoutItems>
+            <layoutItems>
                 <behavior>Required</behavior>
                 <field>Name</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Required</behavior>
                 <field>Visit_Plan__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>Timeplane__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
