--- a/force-app/main/default/layouts/Clinical_Trial_Profile__c-Clinical Trial Profile Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Clinical_Trial_Profile__c-Clinical Trial Profile Layout.layout-meta.xml
@@ -19,6 +19,10 @@
                 <behavior>Edit</behavior>
                 <field>NCT_Number__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Shareback_Settings_On_Participant_Level__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -563,6 +567,10 @@
         <fields>RECORDTYPE</fields>
         <fields>Whose_response_needed__c</fields>
         <relatedList>Trial_Survey__c.Clinical_Trial_Profile__c</relatedList>
+    </relatedLists>
+    <relatedLists>
+        <fields>NAME</fields>
+        <relatedList>Visit_Result_Type_Sharing__c.Clinical_Trial_Profile__c</relatedList>
     </relatedLists>
     <showEmailCheckbox>false</showEmailCheckbox>
     <showHighlightsPanel>false</showHighlightsPanel>
