--- a/force-app/main/default/layouts/Study_Site__c-Study Site Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Study_Site__c-Study Site Layout.layout-meta.xml
@@ -32,6 +32,10 @@
             <layoutItems>
                 <emptySpace>true</emptySpace>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Visit_Results_Sharing__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
