--- a/force-app/main/default/aura/StudyVisitsLegend/StudyVisitsLegend.cmp
+++ b/force-app/main/default/aura/StudyVisitsLegend/StudyVisitsLegend.cmp
@@ -7,6 +7,7 @@
     <ltng:require scripts="{!join(',', $Resource.rr_community_js)}" afterScriptsLoaded="{!c.doInit}"/>
 
     <aura:attribute name="legends" type="List"/>
+    <aura:attribute name="iconNames" type="String"/>
 
     <div class="rr-white-panel">
         <p class="title">{!$Label.c.Home_Page_StudyVisit_WhToEx}</p>
