--- a/force-app/main/default/aura/VisitResultSharingCountryLookup/VisitResultSharingCountryLookup.cmp
+++ b/force-app/main/default/aura/VisitResultSharingCountryLookup/VisitResultSharingCountryLookup.cmp
@@ -8,6 +8,7 @@
     <aura:attribute name="includeStates" type="Boolean" default="false"/>
     <aura:attribute name="isMultiEntry" type="Boolean" default="true"/>
     <aura:attribute name="minTermLength" type="Integer" default="0"/>
+    <aura:attribute name="ctpId" type="String"/>
 
     <!-- methods: -->
     <aura:method name="searchByTerm" action="{!c.doSearchByTerm}" access="public">
