--- a/force-app/main/default/aura/VisitResultSharingPanel/VisitResultSharingPanel.cmp
+++ b/force-app/main/default/aura/VisitResultSharingPanel/VisitResultSharingPanel.cmp
@@ -8,9 +8,13 @@
     <ltng:require scripts="{!join(',', $Resource.rr_community_js)}" afterScriptsLoaded="{!c.doInit}"/>
 
     <!-- attributes: -->
+    <aura:attribute name="initData" type="Object"/>
     <aura:attribute name="groups" type="List"/>
     <aura:attribute name="typeSelectLVList" type="List"/>
     <aura:attribute name="options" type="Object"/>
+    <aura:attribute name="dataSnapshot" type="String"/>
+
+    <aura:method name="refresh" action="{!c.doInit}"/>
 
     <!-- component body: -->
     <c:RRSpinner aura:id="spinner" showSpinner="true"/>
@@ -19,7 +23,15 @@
             <div class="vrs-panel">
                 <div class="group-container">
                     <div class="group-title">Global Data Shareback</div>
-                    <lightning:input type="toggle" label="Data shareback enabled" name="globalSharebackToggle" checked="{!v.options.globalShareBck}"/>
+                    <div class="global-data">
+                        <div>
+                            <lightning:input type="toggle" label="Data shareback enabled" name="globalSharebackToggle"
+                                             checked="{!v.options.globalShareBck}" onchange="{!c.onChangeGlobal}"/>
+                        </div>
+                        <div>
+                            <lightning:button aura:id="saveBtn" variant="brand" label="Save" onclick="{!c.saveOptions}"/>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="{!if(v.options.globalShareBck, 'shareback-settings-container', 'slds-hide')}">
@@ -29,17 +41,21 @@
                         <div class="group-title">Data Shareback Settings on Study Site Level</div>
                         <div class="slds-grid ss-options">
                             <div class="slds-col slds-col slds-size_3-of-12 ss-type-col">
-                                <lightning:select name="SS Selection type" label="Hidden"  variant="label-hidden"
-                                                  class="type-picklist" value="{!v.options.ssSelectionType}" onchange="{!c.doSSSelectionTypeChanged}">
-                                    <aura:iteration items="{!v.options.ssSelectionTypeLVList}" var="option">
+                                <lightning:select name="SS Selection type" label="Hidden" variant="label-hidden"
+                                                  class="type-picklist" value="{!v.options.ssSelectionType}"
+                                                  onchange="{!c.doSSSelectionTypeChanged}">
+                                    <aura:iteration items="{!v.initData.ssSelectionTypeLVList}" var="option">
                                         <option text="{!option.label}" value="{!option.value}"/>
                                     </aura:iteration>
                                 </lightning:select>
                             </div>
                             <div class="slds-col slds-col slds-size_9-of-12 ss-lookup-container">
                                 <aura:if isTrue="{!v.options.ssSelectionType != 'All'}">
-                                    <c:VisitResultSharingSSLookup aura:id="ssSelectLookup" value="{!v.options.selectedSSIds}" ctpId="{!v.recordId}"
-                                                                  onchange="{!c.doSSSelectionChange}" onblur="{!c.doSSSelectionChange}"/>
+                                    <c:VisitResultSharingSSLookup aura:id="ssSelectLookup"
+                                                                  value="{!v.options.selectedSSIds}"
+                                                                  ctpId="{!v.recordId}"
+                                                                  onchange="{!c.doSSSelectionChange}"
+                                                                  onblur="{!c.doSSSelectionChange}"/>
                                 </aura:if>
                             </div>
                         </div>
@@ -49,9 +65,9 @@
                         <div class="group-title">Default Data Shareback Settings on Participant Level</div>
                         <div class="slds-grid participant-options">
                             <div class="slds-col slds-col slds-size_3-of-12 ss-type-col">
-                                <lightning:select name="SS Selection type" label="Hidden"  variant="label-hidden"
+                                <lightning:select name="SS Selection type" label="Hidden" variant="label-hidden"
                                                   class="type-picklist" value="{!v.options.participantDefault}">
-                                    <aura:iteration items="{!v.options.participantDefaultLVList}" var="option">
+                                    <aura:iteration items="{!v.initData.participantDefaultLVList}" var="option">
                                         <option text="{!option.label}" value="{!option.value}"/>
                                     </aura:iteration>
                                 </lightning:select>
@@ -63,9 +79,10 @@
                         <div class="group-title">Data Shareback Availability Timing</div>
                         <div class="slds-grid participant-options">
                             <div class="slds-col slds-col slds-size_3-of-12 ss-type-col">
-                                <lightning:select name="SS Selection type" label="Hidden"  variant="label-hidden"
-                                                  class="type-picklist" value="{!v.options.whenToShow}" onchange="{!c.doWhenToShowChanged}">
-                                    <aura:iteration items="{!v.options.whenToShowLVList}" var="option">
+                                <lightning:select name="SS Selection type" label="Hidden" variant="label-hidden"
+                                                  class="type-picklist" value="{!v.options.whenToShow}"
+                                                  onchange="{!c.doWhenToShowChanged}">
+                                    <aura:iteration items="{!v.initData.whenToShowLVList}" var="option">
                                         <option text="{!option.label}" value="{!option.value}"/>
                                     </aura:iteration>
                                 </lightning:select>
@@ -73,7 +90,10 @@
                             <div class="slds-col slds-col slds-size_9-of-12 ss-lookup-container">
                                 <aura:if isTrue="{!v.options.whenToShow == 'After'}">
                                     <div class="completed-visits-input">
-                                        <lightning:input aura:id="whenToShowDaysInput" type="number" label="" variant="label-hidden" value="{!v.options.showAfterDays}" onblur="{!c.doAfterDaysBlur}"/>
+                                        <lightning:input aura:id="whenToShowDaysInput" type="number" label=""
+                                                         variant="label-hidden" min="0"
+                                                         value="{!v.options.showAfterDays}"
+                                                         onblur="{!c.doAfterDaysBlur}"/>
                                         <div class="info-text">completed visits</div>
                                     </div>
                                 </aura:if>
@@ -82,23 +102,12 @@
                     </div>
                     <!-- PSE Status -->
                     <div class="group-container">
-                        <div class="group-title">Data Shareback Availability Timing (Status-based)</div>
-                        <div class="slds-grid ss-options">
-                            <div class="slds-col slds-col slds-size_3-of-12 ss-type-col">
-                                <lightning:select name="SS Selection type" label="Hidden"  variant="label-hidden"
-                                                  class="type-picklist" value="{!v.options.statusBasedType}" onchange="{!c.doChangeStatusBaseType}">
-                                    <aura:iteration items="{!v.options.statesBasedTypeLVList}" var="option">
-                                        <option text="{!option.label}" value="{!option.value}"/>
-                                    </aura:iteration>
-                                </lightning:select>
-                            </div>
-                            <div class="slds-col slds-col slds-size_9-of-12 ss-lookup-container">
-                                <aura:if isTrue="{!v.options.statusBasedType == 'Selected statuses'}">
-                                    <c:RRPicklistLookup aura:id="statusSelectLookup"  value="{!v.options.selectedStatuses}"
-                                                        sObjectName="Participant_Study_Enrollment__c" fieldName="Status__c"
-                                                       onchange="{!c.doSelectedStatusesChanged}" onblur="{!c.doSelectedStatusesChanged}" />
-                                </aura:if>
-                            </div>
+                        <div class="group-title">When to show the Visit Report</div>
+                        <div class="ss-options">
+                            <c:RRPicklistLookup aura:id="statusSelectLookup" value="{!v.options.selectedStatuses}"
+                                                sObjectName="Participant_Study_Enrollment__c" fieldName="Status__c"
+                                                onchange="{!c.doSelectedStatusesChanged}"
+                                                onblur="{!c.doSelectedStatusesChanged}"/>
                         </div>
                     </div>
                 </div>
@@ -107,7 +116,8 @@
                     <div class="group-container vrs-panel">
                         <div class="group-title">{!group.label}</div>
                         <aura:iteration items="{!group.visitResults}" var="vResult">
-                            <c:VisitResultSharingItem visitResult="{!vResult}" typeSelectLVList="{!v.typeSelectLVList}"/>
+                            <c:VisitResultSharingItem visitResult="{!vResult}" typeSelectLVList="{!v.typeSelectLVList}"
+                                                      ctpId="{!v.recordId}"/>
                         </aura:iteration>
                     </div>
                 </aura:iteration>
