--- a/force-app/main/default/aura/VisitResultSharingPanel/VisitResultSharingPanel.css
+++ b/force-app/main/default/aura/VisitResultSharingPanel/VisitResultSharingPanel.css
@@ -5,6 +5,11 @@
     min-height: 125px;
 }
 
+.THIS .global-data{
+    display: flex;
+    justify-content: space-between;
+}
+
 .THIS .shareback-settings-container{
     margin-top: 20px;
 }
