--- a/force-app/main/default/layouts/Participant_Enrollment__c-Participant Profile Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Participant_Enrollment__c-Participant Profile Layout.layout-meta.xml
@@ -27,6 +27,10 @@
                 <behavior>Readonly</behavior>
                 <field>Participant_Key__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Readonly</behavior>
+                <field>Days_After_Referred__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -373,6 +377,13 @@
         <fields>Notes__c</fields>
         <fields>Date__c</fields>
         <relatedList>Participant_Enrollment_Status_History__c.ParticipantEnrollment__c</relatedList>
+    </relatedLists>
+    <relatedLists>
+        <fields>Name</fields>
+        <fields>Participant</fields>
+        <fields>Survey</fields>
+        <fields>ResponseStatus</fields>
+        <relatedList>SurveyInvitation.Participant_Enrollment__c</relatedList>
     </relatedLists>
     <showEmailCheckbox>false</showEmailCheckbox>
     <showHighlightsPanel>false</showHighlightsPanel>
