--- a/force-app/main/default/layouts/SurveyInvitation-Survey Invitation Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/SurveyInvitation-Survey Invitation Layout.layout-meta.xml
@@ -54,6 +54,10 @@
                 <behavior>Edit</behavior>
                 <field>Reminder_Schedule__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Participant_Enrollment__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns/>
         <style>TwoColumnsLeftToRight</style>
